012/nginx-ingress/ingress-install/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-2
  name: app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - image: cloudadc/cafe:1.0
        name: backend-2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-2
    cis.f5.com/as3-tenant: f5_test_2
    cis.f5.com/as3-app: app-svc-2-app
    cis.f5.com/as3-pool: app_2_svc_pool
  name: app-svc-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-2
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-3
  name: app-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-3
  template:
    metadata:
      labels:
        app: app-3
    spec:
      containers:
      - image: cloudadc/cafe:1.0
        name: backend-3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-3
    cis.f5.com/as3-tenant: f5_test_2
    cis.f5.com/as3-app: app-svc-3-app
    cis.f5.com/as3-pool: app_3_svc_pool
  name: app-svc-3
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-3
  sessionAffinity: None
  type: ClusterIP
